k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: cryptograph-app.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/coin"
            backend:
              service:
                name: coin-provider-srv
                port:
                  number: 3000
